fix whitespace

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,4 +1,11 @@
 .App {
   background-color: #123C45;
-  
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+ 
